$Id: Changelog,v 1.2 2000/10/05 17:38:18 rufustfirefly Exp $

Version 0.3
 - mstore_create is no longer a stub, still have not added support for
   heirarchical directory creation or checking for bad args (rufustfirefly)
 - Cleaned up Changelog (rufustfirefly)

Version 0.2
 - Prepared For Version 0.3 Release -allen
 - Added CVS Strings -allen
 - Added To CVS Repository -allen
 - Made MCAL_DIR a global string that is where the calendar store base is
   located

Version 0.1
 - Added Changelog
 - Changed the driver to use /var/calendar for the calendar store
 - Changed the driver to use /etc/mpasswd for the password file
 - Changed the driver to use encrypted passwords